--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name= "blue">#0343df</color>
     <color name="turquoise">#06c2ac</color>
     <color name="aqua">#13eac9</color>
+    <color name="green">#008000</color>
 </resources>
