--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true"
 
+    android:scrollbars="none"
+    android:layout_marginHorizontal="20dp"
+   >
+
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:backgroundTint="#FFFFFF"
     android:foregroundTint="#FFFFFF"
     android:orientation="vertical"
     android:gravity="center"
-    android:layout_margin="20dp">
-
+    >
 <!--    android:layout_marginHorizontal="20dp"-->
 <!--    android:layout_marginVertical="20dp"-->
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/signin_text"
-        android:paddingVertical="30dp"
-        android:textSize="30sp"
         android:fontFamily="@font/poppins"
-        android:textColor="@color/turquoise"
-        android:textStyle="bold"
+        android:text="@string/signin_text"
         android:textAlignment="center"
-        />
-
-
+        android:textColor="@color/turquoise"
+        android:textSize="30sp"
+        android:textStyle="bold" />
     <TextView
         android:id="@+id/email_text"
         android:layout_width="match_parent"
@@ -41,8 +47,6 @@
         android:textAlignment="textStart"
         android:paddingVertical="8dp"
         />
-
-
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -73,8 +77,6 @@
         android:paddingVertical="15dp"
         />
 
-
-
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -88,20 +90,28 @@
             android:textColor="@color/black"
             android:singleLine="true"
             android:inputType="textPassword"/>
+
+
     </com.google.android.material.textfield.TextInputLayout>
 
-
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="220dp"
+        app:srcCompat="@drawable/sign_up" />
 
     <Button
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="@string/login_text"
-        android:fontFamily="@font/poppins"
-        android:textColor="@color/white"
+        android:layout_marginTop="0dp"
         android:backgroundTint="@color/turquoise"
-        android:paddingHorizontal="40dp"
-
+        android:fontFamily="@font/poppins"
+        android:paddingHorizontal="80dp"
+        android:layout_marginBottom="20dp"
+        android:text="@string/login_text"
+        android:textColor="@color/white"
         />
+
 </LinearLayout>
+</ScrollView>
