login screen and home page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="turquoise">#06c2ac</color>
     <color name="aqua">#13eac9</color>
     <color name="green">#008000</color>
+    <color name="royal_purple">#31004a</color>
+    <color name="transparent">#ffffff</color>
 </resources>
