--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.First_app" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+<!--    <style name="Base.Theme.First_app" parent="Theme.Material3.DayNight.NoActionBar">-->
+<!--        &lt;!&ndash; Customize your dark theme here. &ndash;&gt;-->
+<!--        &lt;!&ndash; <item name="colorPrimary">@color/my_dark_primary</item> &ndash;&gt;-->
+<!--        <item name="android:statusBarColor">@android:color/black</item>-->
+<!--        <item name="android:windowLightStatusBar">false</item>-->
+<!--    </style>-->
+
+    <style name="Theme.First_app" parent="Base.Theme.First_app">
+        <!-- Status bar color. -->
+<!--        <item name="android:statusBarColor">@android:color/black</item>-->
+<!--        <item name="android:windowLightStatusBar">false</item>-->
     </style>
 </resources>
