--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,6 +31,34 @@
             app:shapeAppearanceOverlay="@style/CircleImageView"
             app:srcCompat="@drawable/user_img" />
 
+        <FrameLayout
+            android:id="@+id/logoutIcon"
+            android:layout_marginLeft="10dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/imageView"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_gravity="center"
+                android:background="@color/royal_purple"
+                app:shapeAppearanceOverlay="@style/CircleImageView"
+
+                app:strokeWidth="1dp" />
+
+            <ImageButton
+                android:id="@+id/logoutButton"
+                android:layout_width= "30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:src="@drawable/logout"
+                 />
+        </FrameLayout>
+
+
         <!-- Search icon -->
         <FrameLayout
             android:id="@+id/searchIcon"
@@ -210,16 +238,19 @@
                 android:textStyle="bold"
                 android:layout_marginTop="15dp"
                 />
+
+<!--            <androidx.recyclerview.widget.RecyclerView-->
+<!--                android:id="@+id/songRecyclerView"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginVertical="5dp"-->
+<!--                tools:listitem="@layout/song_card_view" />-->
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/songRecyclerView"
+                android:id="@+id/userRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:listitem="@layout/song_card_view"
                 android:layout_marginVertical="5dp"
-                />
-
-
-
+                tools:listitem="@layout/user_card_view" />
 
 
         </LinearLayout>
