--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -102,14 +102,29 @@
 
         <Button
             android:id="@+id/login_button"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
             android:backgroundTint="@color/turquoise"
             android:fontFamily="@font/poppins"
-            android:paddingHorizontal="80dp"
+            android:gravity="center"
+            android:layout_gravity="center"
             android:layout_marginBottom="20dp"
             android:text="@string/login_text"
+            android:textColor="@color/white"
+            />
+
+        <Button
+            android:id="@+id/register_button"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:backgroundTint="@color/turquoise"
+            android:fontFamily="@font/poppins"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:text="Register"
             android:textColor="@color/white"
             />
 
