--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -11,5 +11,7 @@
         <!-- Status bar color. -->
 <!--        <item name="android:statusBarColor">@android:color/black</item>-->
 <!--        <item name="android:windowLightStatusBar">false</item>-->
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="statusBarForeground">@color/black</item>
     </style>
 </resources>
